# kf2-60fps

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.sentry-native/: last_crash
.sentry-native/45387fed-f921-48e4-ca05-d879418f7770.run/: session.json
.sentry-native/b2904ab8-271e-47e8-c147-ec4392c0edea.run/: __sentry-event  session.json
docs/: RESEARCH.md  USAGE.md  engine.js  index.html  main.js  patches.json  style.css
src/: build_60fps_patch.py
src/.sentry-native/557b920a-85dc-4862-0c3e-c232252d21d2.run/: session.json
tests/: run_engine_node.js  test_patch.py  test_web_parity.py
tools/: export_manifest.py  redux_dropcall.lua  redux_dropfind.lua  redux_dropwrite.lua  redux_enemydmg.lua  redux_entitywatch.lua  redux_framediff.lua  redux_framestep.py  redux_framewatch.py  redux_freeze.lua  redux_pickdump.lua  redux_pokew.py  redux_ramdiff.lua  redux_ramdiff.py  redux_slopeprobe.lua  redux_watchpoint.lua  redux_watchpoint.py  redux_where.py
tools/ghidra/: dump_disasm.java  dump_one.java  find_xref.java
